--- a/Project/001_Dashboard.html
+++ b/Project/001_Dashboard.html
@@ -30,38 +30,255 @@
             <div class="flex-wrapper">
                 <section class="categories-section">
                     <h2>Categories</h2>
-                    <ul>
+                    <ul class="categories-btn">
                         <li>
-                            <img class="list-icons" src="/Project/Assets/menu_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.png" alt="All products Icon.">
-                            <h3>All Products</h3>
+                            <a href="#">
+                                <img class="list-icons" src="/Project/Assets/menu_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.png" alt="All products Icon.">
+                                <h3>All Products</h3>
+                            </a>
                         </li>
                         <li>
-                            <img class="list-icons" src="/Project/Assets/desktop_windows_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg" alt="Monitor Icon.">
-                            <h3>Monitor</h3>
+                            <a href="#">
+                                <img class="list-icons" src="/Project/Assets/desktop_windows_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg" alt="Monitor Icon.">
+                                <h3>Monitor</h3>
+                            </a>
                         </li>
                         <li>
-                            <img class="list-icons" src="/Project/Assets/developer_board_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg " alt="CPU Icon.">
-                            <h3>CPU</h3>
+                            <a href="#">
+                                <img class="list-icons" src="/Project/Assets/developer_board_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg " alt="CPU Icon.">
+                                <h3>CPU</h3>
+                            </a>
                         </li>
                         <li>
-                            <img class="list-icons" src="/Project/Assets/aod_tablet_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg " alt="GPU Icon.">
-                            <h3>GPU</h3>
+                            <a href="#">
+                                <img class="list-icons" src="/Project/Assets/aod_tablet_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg " alt="GPU Icon.">
+                                <h3>GPU</h3>
+                            </a>
                         </li>
                         <li>
-                            <img class="list-icons" src="/Project/Assets/memory_alt_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg " alt="RAM Icon.">
-                            <h3>RAM</h3>
+                            <a href="#">
+                                <img class="list-icons" src="/Project/Assets/memory_alt_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg " alt="RAM Icon.">
+                                <h3>RAM</h3>
+                            </a>
                         </li>
                         <li>
-                            <img class="list-icons" src="/Project/Assets/side_navigation_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg" alt="Case Icon.">
-                            <h3>PC Case</h3>
+                            <a href="#">
+                                <img class="list-icons" src="/Project/Assets/side_navigation_24dp_F4D35E_FILL0_wght400_GRAD0_opsz24.svg" alt="Case Icon.">
+                                <h3>PC Case</h3>
+                            </a>
                         </li>
                     </ul>
                 </section>
                 <sectio class="all-products">
                     <h2>All Products</h2>
-                    
+                    <ul class="product-card">
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/MSI MPG 321 URXW.webp" alt="MSI MPG 321URXW.">
+                                <div class="product-card-body">
+                                    <h5>MSI MPG 321URXW</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱61,495.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Intel Core Ultra 9 285.webp" alt="Intel Core Ultra 9 285.">
+                                <div class="product-card-body">
+                                    <h5>Intel Core Ultra 9 285</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱35,950.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Asus ROG Strix GeForce RTX 4090.webp" alt="Asus ROG Strix GeForce RTX 4090.">
+                                <div class="product-card-body">
+                                    <h5>Asus ROG Strix GeForce RTX 4090</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱145,695.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/G.Skill Trident Z Neo RGB 32GB.webp" alt="G.Skill Trident Z Neo RGB 32GB.">
+                                <div class="product-card-body">
+                                    <h5>G.Skill Trident Z Neo RGB 32GB</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱4,350.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Asus ProArt PA401.webp" alt="Asus ProArt PA401.">
+                                <div class="product-card-body">
+                                    <h5>Asus ProArt PA401</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱6,050.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/MSI Pro MP225V.webp" alt="MSI Pro MP225V.">
+                                <div class="product-card-body">
+                                    <h5>MSI Pro MP225V</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱3,595.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Intel Core Ultra 7 265.webp" alt="Intel Core Ultra 7 265.">
+                                <div class="product-card-body">
+                                    <h5>Intel Core Ultra 7 265</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱22,395.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Gigabyte Geforce RTX 4090.webp" alt="Gigabyte Geforce RTX 4090.">
+                                <div class="product-card-body">
+                                    <h5>Gigabyte Geforce RTX 4090</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱117,750.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Corsair Vengeance RGB Pro SL 32GB.webp" alt="Corsair Vengeance RGB Pro SL 32GB.">
+                                <div class="product-card-body">
+                                    <h5>Corsair Vengeance RGB Pro SL 32GB</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱5,695.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Corsair 5000D.webp" alt="Corsair 5000D.">
+                                <div class="product-card-body">
+                                    <h5>Corsair 5000D</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱8,650.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Gigabyte M27QA.webp" alt="Gigabyte M27QA.">
+                                <div class="product-card-body">
+                                    <h5>Gigabyte M27QA</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱15,950.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Intel Core i7-14700.webp" alt="Intel Core i7-14700.">
+                                <div class="product-card-body">
+                                    <h5>Intel Core i7-14700</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱20,995.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/ASRock AMD Radeon RX 6500.webp" alt="ASRock AMD Radeon RX 6500.">
+                                <div class="product-card-body">
+                                    <h5>ASRock AMD Radeon RX 6500</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱9,450.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/G.Skill Ripjaws V 32GB.webp" alt="G.Skill Ripjaws V 32GB.">
+                                <div class="product-card-body">
+                                    <h5>G.Skill Ripjaws V 32GB</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱3,295.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <img class="product-img" src="/Project/Assets/Montech Air X ARGB.webp" alt="Montech Air X.">
+                                <div class="product-card-body">
+                                    <h5>Montech Air X</h5>
+                                    <div class="product-card-text">
+                                        <img class="ratings-icon" src="/Project/Assets/5 star rating icon.webp" alt="Stars icon">
+                                        <h6>₱3,350.00</h6>
+                                    </div>
+                                    <h5>5 reviews</h5>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </section>
             </div>
+            <ul class="pagination">
+                <li><</li>
+                <li>1</li>
+                <li>2</li>
+                <li>3</li>
+                <li>4</li>
+                <li>5</li>
+                <li>></li>
+            </ul>
         </main>
         <script src="script.js"></script>
     </body>
