--- a/Project/001_Dashboard.html
+++ b/Project/001_Dashboard.html
@@ -123,6 +123,6 @@
                 </form>
             </div>
         </div>
-        <script src="script.js"></script>
+        <script src="dashboard.js"></script>
     </body>
 </html>
