Added Signup and Login functionalities
Signup and Login works using local storage

--- a/Project/001_Dashboard.html
+++ b/Project/001_Dashboard.html
@@ -9,9 +9,13 @@
         <header>
             <nav>
                 <a><img src="/Project/Assets/sub_logo.png" alt="" class="nav-logo">Let’s order PC parts for you.</a>
-                <div>
+                <div id="authButtons">
                     <button id="signupButton" class="btn btn-outline" type="button">Signup</button>
                     <button id="loginButton" class="btn btn-background" type="button">Login</button>
+                </div>
+                <div id="userDropdown" class="hidden">
+                    <span id="usernameDisplay"></span>
+                    <button id="logoutButton"><img src="/Project/Assets/logout_24dp_0E3B66_FILL0_wght400_GRAD0_opsz24.svg" alt="logout icon"></button>
                 </div>
             </nav>
         </header>
