Commit button functionality
Added functionality on:
- Dashboard btn to return to all products.

- All products btn to return to all products

--- a/Project/index.html
+++ b/Project/index.html
@@ -21,9 +21,9 @@
         </header>
         <aside>
             <a href="#"><img src="/Project/Assets/main_logo.png" class="aside-logo"></a>
-            <a href="001_Dashboard.html" class=""><img src="/Project/Assets/dash.png" class="aside-logo dash-btn"></a>
+            <a href="#" id="dashboardBtn"><img src="/Project/Assets/dash.png" class="aside-logo dash-btn"></a>
         </aside>
-        <main class="main">
+        <main class="main" id="main">
             <section class="search-section">
                 <input class="search-bar" type="search" placeholder="Search Products">
                 <img class="search-icon" src="/Project/Assets/search_24dp_0E3B66_FILL0_wght400_GRAD0_opsz24.svg" alt="Search Icon.">
@@ -79,7 +79,7 @@
             </div>
             <div id="productViewContainer" style="display: none;">
                 <section class="all-products">
-                    <a href="001_Dashboard.html">
+                    <a href="#" id="allProductsBtn">
                         <img src="/Project/Assets/arrow_back_ios_new_24dp_0E3B66_FILL0_wght400_GRAD0_opsz24.svg" alt="" class="arrow-logo">
                         <h2> All Products</h2>
                     </a>
