--- a/Project/001_Dashboard.html
+++ b/Project/001_Dashboard.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    
     <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -69,7 +70,7 @@
                         </li>
                     </ul>
                 </section>
-                <sectio class="all-products">
+                <section class="all-products">
                     <h2>All Products</h2>
                     <ul class="product-card">
                         <li>
